# dnsmesh

./: Cargo.toml  rustfmt.toml
Docker/: Client  Endpoint  Entrypoint  Server
Docker/ICL/: Client  Endpoint  Entrypoint  Server
crates/entrypoints/entrypoint/: Cargo.toml
crates/entrypoints/entrypoint/src/: main.rs
crates/entrypoints/server/: Cargo.toml
crates/entrypoints/server/src/: main.rs
crates/lib/expirecollections/: Cargo.toml
crates/lib/expirecollections/src/: lib.rs
crates/resolvers/client/: Cargo.toml
crates/resolvers/client/src/: main.rs
crates/resolvers/endpoint/: Cargo.toml
crates/resolvers/endpoint/src/: main.rs
