[package]
name = "meshdns_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
default-net = "0.21.0"
docker-api = "0.14.0"
domain = "0.9.3"
lazy_static = "1.4.0"
rand = "0.8.5"
socket2 = "0.5.5"
tokio = { version = "1.35.1", features = ["full"] }
expire_collections = { path = "../../lib/expirecollections" }
